# coauthor

./: Dockerfile  LICENSE  README.md  pyproject.toml
coauthor/: __init__.py  __main__.py  app.py  authorship.py  formats.py  git_ops.py  impact.py  llm_config.py  mcp_server.py  report.py  scanner.py  store.py
coauthor/dashboard/: alice.css  alice.js  api.js  app.js  components.js  index.html  router.js  style.css
coauthor/dashboard/views/: authors.js  history.js  home.js  impact.js  scan.js  settings.js
